--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%sveltekit.assets%/favicon.svg" />
     <meta name="description" content="Wonderland is waiting.">
     <meta name="robots" content="nofollow, noarchive, noimageindex" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content">
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
