chore: update tags

--- a/src/app.html
+++ b/src/app.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.svg" />
-    <meta name="description" content="Wonderland is waiting.">
+    <meta name="description" content="Wonderland is waiting." />
     <meta name="robots" content="nofollow, noarchive, noimageindex" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content" />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
